[package]
name = "tower-sessions-libsql-store"
version = "0.1.0"
edition = "2021"
authors = ["Mike Worthley <mike@daybowbow.dev>"]
license = "MIT"
homepage = "https://github.com/daybowbow-dev/tower-sessions-libsql-store"
keywords = ["axum", "sessions", "cookie", "tower", "libsql"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/daybowbow-dev/tower-sessions-libsql-store"
documentation = "https://docs.rs/tower-sessions-libsql-store"
description = "A small library for using tower-sessions with libsql"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
libsql = "0.3.0"
rmp-serde = "1.1.2"
thiserror = "1.0.57"
time = "0.3.34"
tower-sessions-core = { version = "0.10.2", features = ["deletion-task"] }

[dev-dependencies]
axum = "0.7.4"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-test = "0.4.3"
tower-sessions = "0.10.2"
