[package]
name = "tower-sessions-libsql-store"
version = "0.4.0"
edition = "2021"
authors = ["Mike Worthley <mike@daybowbow.dev>"]
license = "MIT"
homepage = "https://github.com/daybowbow-dev/tower-sessions-libsql-store"
keywords = ["axum", "sessions", "cookie", "tower", "libsql"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/daybowbow-dev/tower-sessions-libsql-store"
documentation = "https://docs.rs/tower-sessions-libsql-store"
description = "A small library for using tower-sessions with libsql"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.85"
libsql = "0.6.0"
rmp-serde = "1.3.0"
thiserror = "1.0.69"
time = "0.3.37"
tower-sessions-core = { version = "0.14.0", features = ["deletion-task"] }

[dev-dependencies]
axum = "0.8.1"
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-test = "0.4.4"
tower-sessions = "0.14.0"
